# twibot

./: .gitignore  README.md  RESEARCH.md  WRITEUP.md  ablation.py  model.py  pyproject.toml  train  train.py  train_cresci15.py  train_cresci15_loocv.py
figures/: render_heterophily.py  render_heterophily_graph.py  render_homophily.py  render_message_passing.py  render_results.py  render_training_concepts.py
paper/: main.typ  refs.bib
paper/figures/: architecture.py  homophily_heterophily.py  message_passing.py
results/tables/: ablation_results.json  adarel_clean_5seeds.csv  baselines.csv  cresci15_5seeds.csv  cresci15_leave_one_out.json  dataset_stats.csv  dataset_stats_per_domain.csv  dataset_stats_twibot22.csv  degree_bucket_analysis.csv  domain_decomposed_contributions.csv  global_vs_domain.csv  gnn_results.csv  graph_stats.csv  hetero_bucket_comparison.csv  hetero_bucket_comparison_deg3plus.csv  heterophily_analysis.csv  heterophily_fix_confusion.csv  heterophily_fix_gates.csv  heterophily_fix_results.csv  master_results.csv  mlp_vs_hetero_bucket_comparison.csv  mlp_vs_hetero_bucket_comparison_deg3plus.csv  rf_ablation.csv  significance_tests.csv
src/: baselines.py  correct_and_smooth.py  degree_bucket_analysis.py  domain_analysis.py  evaluate.py  features.py  generate_report.py  gnn_models.py  graph_build.py  heterophily_analysis.py  heterophily_fix.py  load_twibot.py  models.py  rf_ablation.py  topology_features.py  writeup_figures.py
